--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@gridsome/plugin-critical": "^0.2.0",
     "@gridsome/source-graphql": "^0.1.0",
+    "axios": "^0.24.0",
     "gridsome": "^0.7.0",
     "gridsome-plugin-uikit": "^1.0.0",
     "gridsome-source-graphql": "^1.0.2"
